@@ -1,5 +1,14 @@
 2000-04-11  Dirk Herrmann  <D.Herrmann@tu-bs.de>
 
+	* symbols.c (scm_sym2vcell, scm_sym2ovcell_soft, scm_sym2ovcell,
+	scm_intern_obarray_soft, scm_sysintern0,
+	scm_string_to_obarray_symbol, scm_intern_symbol,
+	scm_unintern_symbol, scm_symbol_binding, scm_symbol_interned_p,
+	scm_symbol_bound_p, scm_symbol_set_x):  Don't use C operators to
+	compare SCM values.
+
+2000-04-11  Dirk Herrmann  <D.Herrmann@tu-bs.de>
+
 	* numbers.c (scm_quotient, scm_modulo):  Reordered to handle the
 	case of immediate numbers parameters first.  Also, only use
 	decoded numbers for numerical comparison.
